--- a/10_years/10_years.html
+++ b/10_years/10_years.html
@@ -15,7 +15,7 @@
     </div>
 </header>
 
-<section>
+<section class="section">
     <div class="title">
         Stack Sats Calculator - <span>Bitcoin 10 year savings plan</span>
     </div>
@@ -44,18 +44,141 @@
         </label>
     </div>
     <button id="input">OK</button>
-    <div class="table">
 
-        <div class="result">
-            <div >Expected increase ob the Bitcoin Price (% per year)
-                <div id="percent"></div>
-            </div>
-        </div>
-        <table class="data">
-
-        </table>
-    </div>
 </section>
+<table class="iksweb">
+    <tbody>
+    <tr>
+        <td></td>
+        <td colspan="2">expected Bitcoin price</td>
+        <td colspan="3">savings</td>
+        <td colspan="3">assets</td>
+    </tr>
+    <tr>
+        <td>Savings year</td>
+        <td>Expected increase ob the Bitcoin Price (% per year)</td>
+        <td>Bitcoin price</td>
+        <td>Savings amount per year (USD)</td>
+        <td>Acquired Satoshi</td>
+        <td>Acquired Satoshi
+            (% total savings plan)</td>
+        <td>Cumulative Assets
+            (%  total savings plan)</td>
+        <td> Assets (Satoshi)</td>
+        <td>Assets (USD)</td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td  class="bit_price"></td>
+        <td class="saving" ></td>
+        <td class="acquired" ></td>
+        <td ></td>
+        <td ></td>
+        <td ></td>
+        <td ></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
 <script src="10_years.js"></script>
 </body>
 <style>
