--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <section class="menu">
     <div class="line_menu">
-        <div class="select-menu active">
+        <div class="select-menu">
             <div class="first_line">
                 <span class="title">Stack Sats</span>
                 <div class="select-btn">
