add_assetsSat+acquiredSat

--- a/10_years/10_years.html
+++ b/10_years/10_years.html
@@ -73,10 +73,10 @@
         <td  class="bit_price"></td>
         <td class="saving" ></td>
         <td class="acquired" ></td>
+        <td  class="acquired_sat"></td>
         <td ></td>
+        <td  class="assets"></td>
         <td ></td>
-        <td ></td>
-        <td ></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -84,20 +84,9 @@
         <td class="bit_price"></td>
         <td class="saving"></td>
         <td class="acquired"></td>
+        <td class="acquired_sat"></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td class="start_year"></td>
-        <td class="price_percent"></td>
-        <td class="bit_price"></td>
-        <td class="saving"></td>
-        <td class="acquired"></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="assets"></td>
         <td></td>
     </tr>
     <tr>
@@ -106,20 +95,9 @@
         <td class="bit_price"></td>
         <td class="saving"></td>
         <td class="acquired"></td>
+        <td class="acquired_sat"></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td class="start_year"></td>
-        <td class="price_percent"></td>
-        <td class="bit_price"></td>
-        <td class="saving"></td>
-        <td class="acquired"></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="assets"></td>
         <td></td>
     </tr>
     <tr>
@@ -128,20 +106,9 @@
         <td class="bit_price"></td>
         <td class="saving"></td>
         <td class="acquired"></td>
+        <td class="acquired_sat"></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td class="start_year"></td>
-        <td class="price_percent"></td>
-        <td class="bit_price"></td>
-        <td class="saving"></td>
-        <td class="acquired"></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="assets"></td>
         <td></td>
     </tr>
     <tr>
@@ -150,20 +117,9 @@
         <td class="bit_price"></td>
         <td class="saving"></td>
         <td class="acquired"></td>
+        <td class="acquired_sat"></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-    <tr>
-        <td class="start_year"></td>
-        <td class="price_percent"></td>
-        <td class="bit_price"></td>
-        <td class="saving"></td>
-        <td class="acquired"></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="assets"></td>
         <td></td>
     </tr>
     <tr>
@@ -172,9 +128,53 @@
         <td class="bit_price"></td>
         <td class="saving"></td>
         <td class="acquired"></td>
+        <td class="acquired_sat"></td>
         <td></td>
+        <td class="assets"></td>
         <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td class="acquired_sat"></td>
         <td></td>
+        <td class="assets"></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td class="acquired_sat"></td>
+        <td></td>
+        <td class="assets"></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td class="acquired_sat"></td>
+        <td></td>
+        <td class="assets"></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td class="start_year"></td>
+        <td class="price_percent"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td class="acquired_sat"></td>
+        <td></td>
+        <td class="assets"></td>
         <td></td>
     </tr>
     </tbody>
