--- a/10_years/10_years.html
+++ b/10_years/10_years.html
@@ -74,9 +74,9 @@
         <td class="saving" ></td>
         <td class="acquired" ></td>
         <td  class="acquired_sat"></td>
-        <td ></td>
+        <td  class="cumulative"></td>
         <td  class="assets"></td>
-        <td ></td>
+        <td  class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -85,9 +85,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -96,9 +96,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -107,9 +107,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -118,9 +118,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -129,9 +129,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -140,9 +140,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -151,9 +151,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -162,9 +162,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
@@ -173,9 +173,9 @@
         <td class="saving"></td>
         <td class="acquired"></td>
         <td class="acquired_sat"></td>
-        <td></td>
+        <td class="cumulative"></td>
         <td class="assets"></td>
-        <td></td>
+        <td class="assets_usd"></td>
     </tr>
     </tbody>
 </table>
