--- a/index.html
+++ b/index.html
@@ -15,22 +15,6 @@
         <span>Free Online Calculator - Bitcoin BTC</span>
     </div>
 </header>
-
-
-<!--<section>-->
-<!--    <div class="menu">-->
-<!--        <div class="close">-->
-<!--        <img  src="./images/windowclose_104378.png" alt="icon"></div>-->
-<!--        <ul id="navbar">-->
-<!--            <li><a class="menu_point" href="#">Start calculator</a></li>-->
-<!--            <li><a class="menu_point" href="#">Shrinkage calculator</a></li>-->
-<!--            <li><a class="menu_point" href="#">Savings plan calculator</a></li>-->
-<!--            <li><a class="menu_point" href="#">Withdrawel calculator</a></li>-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--</section>-->
-
-
 <section>
 
 </section>
@@ -47,7 +31,7 @@
             </div>
             <ul class="options">
                 <li class="option">
-                    <a href="#"><span class="option-text">Start calculator</span></a>
+                    <a href="./10_years/10_years.html"><span class="option-text">Start calculator</span></a>
                 </li>
                 <li class="option">
                     <i class="bx bxl-linkedin-square" style="color: #0E76A8;"></i>
@@ -64,8 +48,6 @@
                 </li>
             </ul>
         </div>
-
-        <!--        <img class="logo" src="./images/bitcoin-g094b26c8b_1920.jpg" alt="logo">-->
     </div>
 </section>
 <section class="first_section">
