add menu in 10years

--- a/10_years/10_years.html
+++ b/10_years/10_years.html
@@ -14,7 +14,29 @@
         <span>Free Online Calculator - Bitcoin BTC</span>
     </div>
 </header>
+<section id="menu" class="menu">
+    <div class="line_menu">
 
+        <ul class="options">
+            <li class="option">
+                <a href="../index.html"><span class="option-text">Home page</span></a>
+            </li>
+            <li class="option">
+                <i class="bx bxl-linkedin-square" style="color: #0E76A8;"></i>
+                <a href="#"><span class="option-text">Shrinkage calculator</span></a>
+            </li>
+            <li class="option">
+                <i class="bx bxl-facebook-circle" style="color: #4267B2;"></i>
+                <a href="#"><span class="option-text">Savings plan calculator</span></a>
+            </li>
+            <li class="option">
+                <i class="bx bxl-twitter" style="color: #1DA1F2;"></i>
+                <a href="#"><span class="option-text">Withdrawel calculator</span></a>
+            </li>
+        </ul>
+    </div>
+
+</section>
 <section class="section">
     <div class="title">
         Stack Sats Calculator - <span>Bitcoin 10 year savings plan</span>
@@ -61,22 +83,24 @@
         <td>Savings amount per year (USD)</td>
         <td>Acquired Satoshi</td>
         <td>Acquired Satoshi
-            (% total savings plan)</td>
+            (% total savings plan)
+        </td>
         <td>Cumulative Assets
-            (%  total savings plan)</td>
+            (% total savings plan)
+        </td>
         <td> Assets (Satoshi)</td>
         <td>Assets (USD)</td>
     </tr>
     <tr>
         <td class="start_year"></td>
         <td class="price_percent"></td>
-        <td  class="bit_price"></td>
-        <td class="saving" ></td>
-        <td class="acquired" ></td>
-        <td  class="acquired_sat"></td>
-        <td  class="cumulative"></td>
-        <td  class="assets"></td>
-        <td  class="assets_usd"></td>
+        <td class="bit_price"></td>
+        <td class="saving"></td>
+        <td class="acquired"></td>
+        <td class="acquired_sat"></td>
+        <td class="cumulative"></td>
+        <td class="assets"></td>
+        <td class="assets_usd"></td>
     </tr>
     <tr>
         <td class="start_year"></td>
